# PDFtoOFX

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  FINE_TUNING_FIXES.md  INSTALLATION.md  LICENSE  LOGGING.md  README.md  REORGANIZATION_PLAN.md  WEB_APP_PLAN.md  WEB_APP_QUICKSTART.md  WEB_APP_SUMMARY.md  convert_pdf.py  dockerhowto.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run_web.py
.github/: DOCKER-MAINTENANCE.md  RELEASE_PROCESS.md  SECURITY.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  conventional-commits.yml  docker-publish.yml  release.yml
app/: __init__.py  logging_config.py  models.py
app/services/: __init__.py  anz_plus_parser.py  fitid_generator.py  ofx_generator.py  pdf_extractor.py
app/web/: __init__.py  main.py  routes.py
app/web/templates/: base.html  index.html
docker/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build-local.ps1  docker-compose.yml  test-local.ps1
docs/: AI_PROMPTS.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION.md  REORGANIZATION_COMPLETE.md
examples/outputs/: OFXData.ofx  example_xml.ofx
files/: INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example_output.ofx  requirements.txt
tests/: test_converter.py  test_logging.py
